@@ -38,7 +38,8 @@ public class TableFrame extends JInternalFrame implements InternalFrameListener 
         add(table);
         setFrameIcon(null);
         setBorder(createBevelBorder(0));
-       	putClientProperty("JInternalFrame.isPalette", true);
+        if (System.getProperty("os.name").startsWith("Mac OS"))
+        	putClientProperty("JInternalFrame.isPalette", true);
         setVisible(false);
         setJMenuBar(new TableMenuBar(table));
         toolBar = new TableToolBar(table, this);
